# fribidi-os2

./: bootstrap.cmd  configure.cmd
doc/: Makefile.am  Makefile.in
